style.css
/* ... */
.absolute {
    position: relative;
    left: 15px;
    right: 15px;
    z-index: 20;
}
.flex-faq {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    -ms-flex-wrap: wrap;
        flex-wrap: wrap;
}

.flex-faq .Faq {
    -ms-flex-preferred-size: 49%;
        flex-basis: 49%;
    height: 100%;
}

@media (max-width: 600px) {
 .flex-faq .Faq {
    -ms-flex-preferred-size: 49%;
        flex-basis: 100%;
    height: 100%;
}  
}

